--- a/index.html
+++ b/index.html
@@ -6,6 +6,51 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<img src="https://images.pexels.com/photos/358457/pexels-photo-358457.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="nature"/>
+    <h1>Singapore</h1>
+    <img src="https://assets.hyatt.com/content/dam/hyatt/hyattdam/images/2015/10/30/1510/Grand-Hyatt-Singapore-P615-Esplanade.jpg/Grand-Hyatt-Singapore-P615-Esplanade.16x9.jpg?imwidth=1920" alt="some description">
+    <p> officially the <b>Republic of Singapore</b>, is a sovereign island city-state
+        in maritime Southeast Asia. It lies about one degree of latitude
+        (137 kilometres or 85 miles) north of the equator, off the southern
+        tip of the Malay Peninsula, bordering the Straits of Malacca to the west,
+        the Riau Islands to the south, and the South China Sea to the east.
+        The country's territory is composed of one main island, 63 satellite
+        islands and islets, and one outlying islet, the combined area of
+        which has increased by 25% since the country's independence as a result
+        of extensive land reclamation projects. The country is home to 5.6 million
+        residents, 61% (3.4 million) of whom are Singaporean citizens. There are
+        four official languages of Singapore: English, Malay, Chinese, and Tamil;
+        with English being the lingua franca and Malay as the national language.
+        This reflects in its rich cultural diversity and extensive ethnic cuisine
+        and major festivals. Multiracialism is enshrined in the constitution,
+        and continues to shape national policies in education, housing, and politics.</p>
+<!--    <iframe src=https://en.wikipedia.org/wiki/Singapore height="400px" width="500px"></iframe>-->
+    <table>
+        <caption>Login</caption>
+        <tr>
+            <th>User name</th>
+            <th>Phone number</th>
+            <th>Email</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+        </tr>
+    </table>
+        </br>
+    <a href="https://en.wikipedia.org/wiki/Singapore" target="_blank" title="Wikipedia">Wiki</a>
+    <ul>
+        <li>Paris</li>
+        <li>Milan</li>
+        <li>Pattaya</li>
+    </ul>
+
+
+
 </body>
 </html>
