--- a/lab2/TravelAgancy.html
+++ b/lab2/TravelAgancy.html
@@ -2,9 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <link rel="stylesheet" href="lab1.2.css">
 </head>
 <body>
-$END$
+<ul>
+    <li>
+        <a href="lab1.2.html">Back</a>
+    </li>
+</ul>
+<h1>Cities i want to visit</h1>
+<table>
+    <thead>
+    <tr>
+        <th>Name</th>
+        <th>Country</th>
+        <th>Img</th>
+        <th>Description</th>
+        <th>Details</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>London</td>
+        <td>Great Britain</td>
+        <td><img src="https://lp-cms-production.imgix.net/2019-06/55425108.jpg?fit=crop&q=40&sharp=10&vib=20&auto=format&ixlib=react-8.6.4" alt="GB"></td>
+        <td>London is the capital and largest city of England and the United Kingdom</td>
+        <td><iframe src="https://en.wikipedia.org/wiki/london"></iframe></td>
+    </tr>
+    <tr>
+        <td>Istanbul</td>
+        <td>Turkish</td>
+        <td><img src="https://lp-cms-production.imgix.net/2019-06/55425108.jpg?fit=crop&q=40&sharp=10&vib=20&auto=format&ixlib=react-8.6.4" alt="GB"></td>
+        <td>Istanbul formerly known as Byzantium and Constantinople, is the most populous city in Turkey</td>
+        <td><iframe src="https://en.wikipedia.org/wiki/istanbul"></iframe></td>
+    </tr>
+    <tr>
+    <td>Warsaw</td>
+    <td>Poland</td>
+    <td><img src="https://lp-cms-production.imgix.net/2019-06/55425108.jpg?fit=crop&q=40&sharp=10&vib=20&auto=format&ixlib=react-8.6.4" alt="GB"></td>
+    <td>Warsaw is the capital and largest city of Poland</td>
+    <td><iframe src="https://en.wikipedia.org/wiki/Warsaw"></iframe></td>
+    </tr>
+    </tbody>
+    <tfoot>
+    <tr>
+        <td>1</td>
+        <td>2</td>
+        <td>3</td>
+        <td>4</td>
+        <td>5</td>
+    </tr>
+    </tfoot>
+
+</table>
 </body>
 </html>
