all works from first lab to bootstrap

--- a/lab2/lab1.2.html
+++ b/lab2/lab1.2.html
@@ -7,10 +7,15 @@
 
 </head>
 <body>
-    <ul>
-        <li>
-            <a href="TravelAgancy.html">Ostap</a>
-        </li>
-    </ul>
+<h1>World Trip</h1>
+<h2>Here is your best trip ever</h2>
+<ul>
+    <li><a href="https://en.wikipedia.org/wiki/United_States" target="_blank">Link 1</a></li>
+    <li><a href="https://en.wikipedia.org/wiki/United_States" target="_blank">Link 2</a></li>
+    <li><a href="https://en.wikipedia.org/wiki/United_States" target="_blank">Link 3</a></li>
+    <li><a href="https://en.wikipedia.org/wiki/United_States" target="_blank">Link 4</a></li>
+</ul>
+<article>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad consequuntur culpa deserunt ducimus itaque laborum laudantium maiores molestias mollitia necessitatibus non officiis, quam quisquam recusandae, reprehenderit saepe tempora tenetur ut vitae. Illum magni molestias nesciunt odit saepe temporibus? Alias at dignissimos enim ex exercitationem fugit, labore laborum, nobis perferendis velit veniam veritatis. Amet, aperiam culpa eveniet optio reiciendis voluptas.</article>
 </body>
+
 </html>
