--- a/lab2/index.html
+++ b/lab2/index.html
@@ -7,15 +7,9 @@
 
 </head>
 <body>
+<div id="mainContainer">
 
-
-<input id="check1" type="checkbox">it is day now<br>
-<input id="check2" type="checkbox">it is sunny<br>
-<input id="check3" type="checkbox">it is rain<br>
-<input id="check4" type="checkbox">it is cold<br>
-<input id="check5" type="checkbox">it is weekend<br>
-
-<button onclick="analyzeWeather()"> Save </button>
+</div>
 
 
 
