--- a/lab2/index.html
+++ b/lab2/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
 <div id="mainContainer">
+    <h3>Sign Up</h3>
+    <h4>Please fill the input form</h4>
+    <div class="form-wrapper">
+        <label for="username"> Username </label><input id="username">
+        <label for="email"> Email </label><input id="email">
+        <label for="password"> Password </label><input id="password">
+        <label for="passwordConf"> PasswordConf </label><input id="passwordConf">
+        <button id="submitRegistration">Submit</button>
+    </div>
 
 </div>
 
